course/kubernetes/labs/04-Deployments/04.9-deployment-strategies/04-canary/nginx-ingress/ingress-v2-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-canary
  labels:
    app: my-app
  annotations:
    # Enable canary and send 10% of traffic to version 2
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  ingressClassName: nginx
  rules:
  - host: my-app.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: my-app-v2
            port:
              number: 80
