course/kubernetes/labs/04-Deployments/04.9-deployment-strategies/04-canary/nginx-ingress/ingress-v2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  ingressClassName: nginx
  rules:
  - host: my-app.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: my-app-v2
            port:
              number: 80
